objects/E2E_AccGrpReq_ChatterMember_Junc__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chatter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E2E_E2E_AccGrpReq_ChatterMember_Juncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2E_Acc_Group_Setup_Request__c</fullName>
        <label>E2E Acc Group Setup Request</label>
        <referenceTo>E2E_Acc_Group_Setup_Request__c</referenceTo>
        <relationshipName>E2E_E2E_AccGrpReq_ChatterMember_Juncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isRemoveRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRemoveRequest</label>
        <type>Checkbox</type>
    </fields>
    <label>E2E AccGrpReq ChatterMember Junc</label>
    <nameField>
        <label>E2E AccGrpReq ChatterMember Junc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E AccGrpReq ChatterMember Juncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>